Add Blade and Zed as git submodules
- Add kvark/blade for graphics library exploration
- Add zed-industries/zed for GPUI reference
- Update .gitignore to allow submodules in vendor/

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ captures/
 out/
 
 # Vendor directory (contains submodules)
-vendor/
+# Note: Submodules are tracked by git, so we don't ignore the vendor directory
 
 # IDE
 .vscode/
