--- a/rust-android-app/Cargo.toml
+++ b/rust-android-app/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "rust-android-app"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
